# telegram-github-action

./: Cargo.toml  Dockerfile  LICENSE  README.md  action.yml  build.md  nc
.github/: pr-labeler.yml  release-drafter.yml
.github/workflows/: build-and-push-docker.yml  pr-labeler.yml  telegram.yml
docker/: Dockerfile
docs/: push-gitlab-real.json  push-gitlab.json  push.json  release.json
make/: buid.sh
src/: main.rs  markdown.rs  telegram.rs
src/event/: mod.rs  push.rs  release.rs
src/github/: mod.rs
src/push/: mod.rs
src/test/: mod.rs
