[package]
name = "telegram-github-acttion"
version = "0.1.0"
authors = ["kviring <alex@kviring.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = { version = "0.8.0", features = ["rustls"], default-features = false }
serde = "1.0.106"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"